# QuickDimmer

./: .gitignore  README.md  generate_icon.py  monitor_dimmer.sh  run.sh  test_backend.py
Reference Materials/: Logs.txt  Python_Electron_Architecture_Plan.txt
backend/: api_server.py  display_manager.py  focus_detector.py  main.py  pyproject.toml  requirements.txt
frontend/: main.js  package.json
frontend/assets/: entitlements.mac.plist  icon.icns
frontend/renderer/: app.js  index.html  styles.css
frontend/scripts/: notarize.js
