[tool.poetry]
name = "monitor-dimmer-backend"
version = "1.0.0"
description = "Backend service for MonitorDimmer - macOS display focus dimming application"
authors = ["MonitorDimmer <user@example.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
pyobjc-core = "^10.1"
pyobjc-framework-Cocoa = "^10.1"
pyobjc-framework-Quartz = "^10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"] 